# convocations

./: .gitignore  AGENTS.md  Cargo.toml  PRD.md  README.md  WARP.md
.cargo/: config.toml
.github/workflows/: README.md  build.yml  update-curated-models.yml
crates/curator_snapshot/: Cargo.toml
crates/curator_snapshot/src/: alias.rs  config.rs  curate.rs  error.rs  fetch.rs  lib.rs  main.rs  snapshot.rs
crates/rconv/: Cargo.toml
crates/rconv-cli/: Cargo.toml
crates/rconv-cli/src/: cli_args.rs  lib.rs  main.rs
crates/rconv-cli/tests/: cli_parsing.rs  preset_crud.rs
crates/rconv-core/: Cargo.toml
crates/rconv-core/src/: config.rs  curator.rs  lib.rs  logging.rs  openrouter.rs  runtime.rs  secret_store.rs
crates/rconv-core/tests/: pipeline.rs
crates/rconv-gui/: Cargo.toml
crates/rconv-gui/src/: app.rs  async_bridge.rs  dialogs.rs  lib.rs  oauth.rs  processor.rs  state.rs  tray.rs  ui_state.rs
crates/rconv-gui/src/widgets/: api_key_section.rs  config_form.rs  diff_preview.rs  mod.rs  model_selector.rs  preset_selector.rs  processing_options.rs  progress_display.rs  technical_log.rs
crates/rconv/src/: main.rs
docs/: config-schema.md  openrouter-oauth.md
frontend/: build.js  package.json
frontend/src/: app.js
frontend/src/app/: app-root.js  config.js  console.js  constants.js  notifications.js  progress.js
frontend/src/components/: curated-model-select.js
frontend/static/: app.js  index.html  styles.css
frontend/tests/: curated-model-select.test.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: aliases.json  model_snapshot.json
tools/frontend-runner/: Cargo.toml
tools/frontend-runner/src/: main.rs
tools/signing/: set-macos-secrets.sh
