[workspace]
members = [
    "crates/rconv-cli",
    "crates/rconv-core",
    "src-tauri",
    "tools/frontend-runner",
]
default-members = ["crates/rconv-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
google-ai-rs = { version = "0", features = ["serde", "tls-native-roots"] }
regex = "1"
shellexpand = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termdiff = "4"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
dirs = "6"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

# Optimize dependencies even in dev builds for better performance during development
[profile.dev.package."*"]
opt-level = "z"
