[workspace]
members = [
    "crates/curator_snapshot",
    "crates/rconv-cli",
    "crates/rconv-core",
    "crates/rconv-gui",
    "crates/rconv",
]
default-members = ["crates/rconv"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0", features = ["serde"] }
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
openrouter-rs = "0"
regex = "1"
shellexpand = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termdiff = "4"
tokio = { version = "1", features = ["full"] }
toml = "0"
dirs = "6"
base64 = "0"
sha2 = "0"
rand = "0"
reqwest = { version = "0", features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2"
chacha20poly1305 = "0"
keyring = "3"
thiserror = "2"
rpassword = "7"
strsim = "0"
tracing = { version = "0", features = ["std"] }
tracing-subscriber = { version = "0", features = ["fmt", "env-filter", "json", "time", "local-time"] }
tracing-appender = "0"

# eframe GUI dependencies
eframe = "0"
egui = "0"
rfd = "0"
tray-icon = "0"
open = "5"
directories = "6"
anyhow = "1"
image = { version = "0", default-features = false, features = ["png"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

# Optimize dependencies even in dev builds for better performance during development
[profile.dev.package."*"]
opt-level = "z"
