[package]
name = "curator_snapshot"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
openrouter-rs.workspace = true
futures-util = "0.3"
