[package]
name = "rconv-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
openrouter-rs.workspace = true
regex.workspace = true
shellexpand.workspace = true
serde.workspace = true
serde_json.workspace = true
termdiff.workspace = true
tokio.workspace = true
toml.workspace = true
dirs.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
chacha20poly1305.workspace = true
keyring.workspace = true
thiserror.workspace = true
